--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "conductor",
   "version": "0.1.0",
+  "homepage": "https://alvinalexander.github.io/conductor",
   "private": true,
-  "homepage": "https://git.corp.adobe.com/pages/aghouas/conductor-react/",
   "dependencies": {
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
@@ -14,7 +14,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "gh-pages": "^3.0.0",
+    "gh-pages": "^4.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
@@ -24,7 +24,7 @@
     "webmidi": "^2.5.1"
   },
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "yarn build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
