--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-tooltip": "^4.2.21",
     "scatter-gl": "^0.0.5",
     "stats-js": "^1.0.1",
     "three": "^0.116.1",
